--- a/circle.yml
+++ b/circle.yml
@@ -7,17 +7,17 @@ machine:
 dependencies:
   override:
     # 建構方式使用 docker build
-    - docker build -t hello-ci-workflowa .:
+    - docker build -t jaskon139/sirius2 .:
            timeout : 9600000
 
 test:
   override:
     # 使用 curl 測試 docker 是否有順利執行 node
-    - docker run -d -p 3000:3000 hello-ci-workflowa; sleep 10
+    - docker run -d -p 3000:3000 jaskon139/sirius2; sleep 10
 
 deployment:
   hub:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push jaskon139/hello-ci-workflowa
+      - docker push jaskon139/sirius2
